--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ bencode-py = "^4.0.0"
 jinja2 = "^3.1.4"
 aiocron = "^1.8"
 python-dotenv = "^1.0.1"
+rank-torrent-name = "^0.2.21"
 
 
 [build-system]
