--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ jinja2 = "^3.1.4"
 aiocron = "^1.8"
 python-dotenv = "^1.0.1"
 rank-torrent-name = "^0.2.21"
+cachetools = "^5.3.3"
 
 
 [build-system]
