--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ python-dotenv = "^1.0.1"
 rank-torrent-name = "^0.2.21"
 cachetools = "^5.3.3"
 redis = "^5.0.7"
+aiohttp = "^3.9.5"
+aiofiles = "^24.1.0"
 
 
 [build-system]
