--- a/.github/workflows/docker-rework.yml
+++ b/.github/workflows/docker-rework.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker image to GitHub Packages on Dev Branch
 on:
   push:
     branches:
-      - limedrive-rework
+      - limedrive-redis-cache
 
 jobs:
   build:
@@ -35,4 +35,4 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/limedrive/stremio-jackett:latest
+            ghcr.io/limedrive/stremio-jackett:develop
